# okey-game

./: CMakeLists.txt  README.md  best_solution.cpp  best_solution.h  tests.cpp
test/: CMakeLists.txt  tests.cpp
